--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,7 +1,18 @@
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contacts.html">Contacts</a></li>
-  </ul>
-</nav>
+<div class="header">
+  <nav>
+    <div class="header__menu">
+      <div class="header__logo">
+        <img src="../img/fill.svg">
+      </div>
+      <a href=""><p>HEADPHONES</p></a>
+      <a href=""><p>EARPHONES</p></a>
+      <a href=""><p>SPEAKERS</p></a>
+      <a href=""><p>EXPLORE</p></a>
+    </div>
+    <div class="header__icons">
+      <a href=""><img src="../img/search.png"></a>
+      <a href=""><img src="../img/Account.svg"></a>
+      <a href=""><img src="../img/Bucket.svg"></a>
+    </div>
+  </nav>
+</div>
