--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,45 @@
-<span class="spacer"></span>
-<span class="spacer"></span>
-<footer>
-  <ul>
-    <li>
-      <a href="https://www.ivarprudnikov.com/static-website-multiple-html-pages-using-webpack-plus-github-example/">Blog post</a>
-    </li>
-    <li>
-      <a href="https://github.com/ivarprudnikov/webpack-static-html-pages">Github repository</a>
-    </li>
-  </ul>
+<footer class="footer">
+  <div class="footer__content_wrap">
+    <ul class="footer__content_columns">
+      <li class="footer__content_logo">
+        <a href="#"><img src="../img/footer_logo.svg" alt="logo"></a>
+      </li>
+      <li>
+        <ul>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">HEADPHONES</a></li>
+          <li><a href="#">EARPHONES</a></li>
+          <li><a href="#">SPEAKERS</a></li>
+          <li><a href="#">ACCESSORIES</a></li>
+          <li><a href="#">COLLABORATIONS</a></li>
+          <li><a href="#">BEATSAUDIO</a></li>
+          <li><a href="#">SPECIAL OFFERS</a></li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">PRODUCT HELP</a></li>
+          <li><a href="#">SERVICE & WARRANTY</a></li>
+          <li><a href="#">REGISTER YOUR BEATS</a></li>
+          <li><a href="#">UPDATE YOUR BEATS</a></li>
+          <li><a href="#">AUTHORIZED SERVICE PROVIDERS</a></li>
+          <li><a href="#">CONTACT SUPPORT</a></li>
+          <li><a href="#">INTERNATIONAL NUMBERS</a></li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li><a href="#">Company</a></li>
+          <li><a href="#">PRODUCT HELP</a></li>
+          <li><a href="#">NEWS AND EVENTS</a></li>
+          <li><a href="#">PROMOTION TERMS</a></li>
+          <li><a href="#">PRIVACY POLICY</a></li>
+          <li><a href="#">TRADEMARK</a></li>
+          <li><a href="#">TERMS OF USE</a></li>
+          <li><a href="#">COOKIES</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 </footer>
