--- a/src/page-index/page.css
+++ b/src/page-index/page.css
@@ -2,7 +2,7 @@ body {
   background-color: #2B2835;
 }
 nav {
-  background-color: #c40000;
+  background-color: #191720;
 }
 .page-title {
   color: greenyellow;
