--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,18 +1,19 @@
-<div class="header">
-  <nav>
-    <div class="header__menu">
-      <div class="header__logo">
-        <img src="../img/fill.svg">
-      </div>
-      <a href=""><p>HEADPHONES</p></a>
-      <a href=""><p>EARPHONES</p></a>
-      <a href=""><p>SPEAKERS</p></a>
-      <a href=""><p>EXPLORE</p></a>
+<header>
+  <div class="nav__menu">
+    <div class="nav__logo">
+      <img src="../img/fill.svg">
     </div>
-    <div class="header__icons">
-      <a href=""><img src="../img/search.png"></a>
-      <a href=""><img src="../img/Account.svg"></a>
-      <a href=""><img src="../img/Bucket.svg"></a>
+    <ul class="nav__list">
+      <li><a href="">HEADPHONES</a></li>
+      <li><a href="">EARPHONES</a></li>
+      <li><a href="">SPEAKERS</a></li>
+      <li><a href="">EXPLORE</a></li>
+    </ul>
+    <div class="nav__icons">
+      <a href=""><img src="../img/search.png" alt="search"></a>
+      <a href=""><img src="../img/account.svg" alt="account"></a>
+      <a href=""><img src="../img/bucket.svg" alt="bucket"></a>
+      <p><img class="ellipse" src="../img/ellipse_3.svg" alt="ellipse"></p>
     </div>
-  </nav>
-</div>
+  </div>
+</header>
