--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<div class="footer">
+<footer class="footer">
   <div class="footer__content_logo">
     <a href="#"><img src="../img/footer_logo.svg" alt="logo"></a>
   </div>
@@ -37,6 +37,7 @@
       <li class="column_name">Follow Us</li>
     </ul>
   </div>
-</div>
-<p class="copyright">Copyright © 2020 Apple Inc. - All rights reserved.</p>
-</div>
+  </div>
+</footer>
+
+
