--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -13,7 +13,8 @@
       <a href=""><img src="../img/search.png" alt="search"></a>
       <a href=""><img src="../img/account.svg" alt="account"></a>
       <a href=""><img src="../img/bucket.svg" alt="bucket"></a>
-      <p><img class="ellipse" src="../img/ellipse_3.svg" alt="ellipse"></p>
+<!--      <p><img class="ellipse" src="../img/ellipse_3.svg" alt="ellipse"></p>-->
+      <p class="ellipse">3</p>
     </div>
   </div>
 </header>
