--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,59 +1,12 @@
-/*@font-face {*/
-/*  font-family: 'Montserrat';*/
-/*  src: url('../fonts/Montserrat-Bold.ttf');*/
-/*}*/
+* {
+  margin: 0;
+  padding: 0;
+}
 
 html, body {
   height: 100vh;
   width: 100%;
   background: white;
-}
-.nav__menu {
-  display: flex;
-  z-index: 10;
-  position: relative;
-  height: 78px;
-  background-color: rgba(25, 23, 32, 0.47);
-  align-items: center;
-  justify-content: space-around;
-  width: 100%;
-}
-.nav__logo {
-  display: flex;
-}
-.nav__list {
-  display: flex;
-  font-family: 'Montserrat', serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 18px;
-  letter-spacing: 1.90909px;
-  list-style: none;
-}
-.nav__list > li > a {
-  color: white;
-  text-decoration: none;
-}
-
-.nav__list > li > a:hover {
-  color: #00B0FF
-}
-
-.nav__icons {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 180px;
-  padding-left: 24px;
-}
-
-.ellipse {
-  position: absolute;
-  width: 12px;
-  height: 12px;
-  right: 20px;
-  top: 22px;
 }
 
 .container {
@@ -61,13 +14,14 @@ html, body {
   flex-direction: column;
   align-content: center;
 }
+
 .headphones {
   display: flex;
   position: absolute;
   width: 856px;
   height: 766px;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
 }
 
 .product_buy {
@@ -93,6 +47,7 @@ html, body {
   color: black;
   text-align: center;
   line-height: 40px;
+  text-decoration: none;
 }
 
 .product__price-buy {
@@ -103,7 +58,7 @@ html, body {
 }
 
 .product__description_small{
-  font-family: Montserrat;
+  font-family: Montserrat-Bold;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -131,11 +86,205 @@ html, body {
 .product__name {
   top: calc(50% - 86px/2 - 43px);
   height: 86px;
-  font-family: Montserrat;
+  font-family: Montserrat-Bold;
   font-style: normal;
   font-weight: bold;
   font-size: 40px;
   line-height: 43px;
+  font-size: 50px;
+  line-height: 55px;
+  color: #2B2835;
+}
+
+.beats-pill {
+  display: flex;
+  grid-template-columns: 50% 50%;
+  background: white;
+}
+
+.beats-pill_description {
+  font-size: 16px;
+  line-height: 20px;
+  color: #2B2835;
+}
+
+.beats-pill__product {
+  flex: auto;
+  margin-left: 93px;
+  margin-top: 189px;
+}
+
+.beats-pill__price {
+  display: flex;
+}
+
+.beats__img {
+  flex:auto;
+  left: 631px;
+  top: 663px;
+}
+
+.beats-pill__change {
+  font-size: 40px;
+  line-height: 55px;
+  color: #2B2835;
+}
+
+.beats-pill__find {
+  font-size: 16px;
+  line-height: 20px;
+  color: #2B2835;
+}
+
+.beats-pill__buy {
+  flex:auto;
+  font-size: 40px;
+  line-height: 49px;
+  color: #2B2835;
+}
+
+.beats-pill__button {
+  flex: auto;
+  position: absolute;
+  width: 110px;
+  height: 41px;
+  margin-left: 190px;
+  border-radius: 100px;
+  background: #000000;
+  color: #ffffff;
+  text-align: center;
+  line-height: 40px;
+  text-decoration: none;
+
+}
+
+.change-color a:visited{
+  color: black;
+}
+
+.change-color a:hover{
+  width: 50px;
+  height: 50px;
+  color: black;
+}
+
+.color-white {
+  display: inline-block;
+  width: 36px;
+  height: 36px;
+  border: 1px solid rgba(0,0,0,0.3);
+  border-radius: 100px;
+  background: white;
+}
+
+.color-red {
+  display: inline-block;
+  width: 36px;
+  height: 36px;
+  border-radius: 100px;
+  background: #DD5656;
+}
+
+.color-black {
+  display: inline-block;
+  width: 36px;
+  height: 36px;
+  border-radius: 100px;
+  background: black;
+}
+
+.change-color a:hover {
+  opacity: 0.7;
+}
+
+.powerbeats {
+  height: 844px;
+  background: linear-gradient(118.04deg, #E040FB 14.55%, #0A00B6 84.03%);
+}
+
+.powerbeats__product {
+  display: flex;
+  background: url("/src/img/group_18.svg");
+  background-size: 100%;
+  height: 700px;
+  top: 1451px;
+
+}
+
+.powerbeats__img {
+  flex: auto;
+  width: 701px;
+  height: 804px;
+  left: 49px;
+  top: 1466px;
+
+}
+
+.powerbeats__product-buy {
+  flex: auto;
+}
+
+.powerbeats__description-small {
+  color: #F8F8F9;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.powerbeats__title{
+  color: #F8F8F9;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 55px;
+}
+
+.powerbeats__description{
+  color: #F8F8F9;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 27px;
+}
+
+.powerbeats__price{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 49px;
+  color: #FFFF00;
+}
+
+.powerbeats__buy{
+  flex: auto;
+  /*position: absolute;*/
+  width: 170px;
+  height: 41px;
+  margin-left: 190px;
+  border-radius: 100px;
+  background: #000000;
+  color: #ffffff;
+  text-align: center;
+  line-height: 40px;
+  text-decoration: none;
+}
+
+.powerbeats__button{
+  text-decoration: none;
+  color: white;
+}
+
+.powerbeats__button:hover{
+  color: #00B0FF;
+}
+
+.powerbeats__music{
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 20px;
+  color: #ffffff;
 }
 
 .page-title {
@@ -156,3 +305,5 @@ html, body {
 .spacer {
   flex: 2 1 auto;
 }
+
+
