--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -4,10 +4,10 @@
       <img src="../img/fill.svg">
     </div>
     <ul class="nav__list">
-      <li><a href="">HEADPHONES</a></li>
-      <li><a href="">EARPHONES</a></li>
-      <li><a href="">SPEAKERS</a></li>
-      <li><a href="">EXPLORE</a></li>
+      <li><a class="nav__headphones" href="">HEADPHONES</a></li>
+      <li><a class="nav__earphones" href="">EARPHONES</a></li>
+      <li><a class="nav__speakers" href="">SPEAKERS</a></li>
+      <li><a class="nav__explore" href="">EXPLORE</a></li>
     </ul>
     <div class="nav__icons">
       <a href=""><img src="../img/search.png" alt="search"></a>
