--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,6 +1,6 @@
 .nav__menu {
   display: flex;
-  z-index: 10;
+  z-index: 1;
   position: relative;
   height: 78px;
   background-color: rgba(25, 23, 32, 0.47);
@@ -9,12 +9,10 @@
   width: 100%;
 }
 .nav__logo {
-  display: flex;
-  padding-left: 94px;
+  margin-left: 194px;
 }
 .nav__list {
   display: flex;
-  font-family: 'Montserrat', serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -22,6 +20,7 @@
   letter-spacing: 1.90909px;
   list-style: none;
 }
+
 .nav__list > li > a {
   color: white;
   text-decoration: none;
