--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,7 +1,7 @@
 <header>
   <div class="nav__menu">
     <div class="nav__logo">
-      <img src="../img/fill.svg">
+      <img src="../img/fill.svg" alt="fill">
     </div>
     <ul class="nav__list">
       <li><a class="nav__headphones" href="">HEADPHONES</a></li>
