--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,12 +1,10 @@
 * {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 
 html, body {
-  font-family: Montserrat-Bold;
   height: 100vh;
-  width: 100%;
   background: white;
 }
 
@@ -42,7 +40,6 @@ html, body {
 .headphones__description {
   height: 86px;
   width: 506px;
-  height: 86px;
   font-weight: bold;
   font-size: 40px;
   line-height: 43px;
@@ -76,13 +73,13 @@ html, body {
   color: black;
   background: #00B0FF;
   border-radius: 100px;
+  border: none;
   width: 170px;
   height: 41px;
 }
 
 .headphones__music {
   color: #00B0FF;
-  font-family: Montserrat;
   font-size: 13px;
   line-height: 20px;
   font-weight: 500;
@@ -91,8 +88,8 @@ html, body {
 
 .beats-pill {
   display: flex;
-  grid-template-columns: 50% 50%;
   background: white;
+
 }
 
 .beats-pill_description {
@@ -161,7 +158,7 @@ html, body {
   text-decoration: none;
   margin-top: 51px;
   margin-left: 163px;
-
+  border: none;
 }
 
 .beats-pill__music {
@@ -179,16 +176,6 @@ html, body {
   margin-top: 19px;
 }
 
-.change-color a:visited{
-  color: black;
-}
-
-.change-color a:hover{
-  width: 50px;
-  height: 50px;
-  color: black;
-}
-
 .color-white {
   display: inline-block;
   width: 36px;
@@ -204,6 +191,7 @@ html, body {
   height: 36px;
   border-radius: 100px;
   background: #DD5656;
+  margin-left: 13px;
 }
 
 .color-black {
@@ -212,6 +200,7 @@ html, body {
   height: 36px;
   border-radius: 100px;
   background: black;
+  margin-left: 13px;
 }
 
 .change-color a:hover {
@@ -262,6 +251,7 @@ html, body {
   font-weight: bold;
   font-size: 50px;
   line-height: 55px;
+  margin-top: 7px;
 }
 
 .powerbeats__description{
@@ -270,38 +260,28 @@ html, body {
   font-weight: normal;
   font-size: 14px;
   line-height: 27px;
+  margin-top: 22px;
 }
 
 .powerbeats__price{
-  font-style: normal;
-  font-weight: normal;
+  display: flex;
   font-size: 40px;
   line-height: 49px;
   color: #FFFF00;
-}
-
-.powerbeats__buy{
-  flex: auto;
-  position: absolute;
-  width: 170px;
-  height: 41px;
-  margin-left: 190px;
-  border-radius: 100px;
-  background: #000000;
-  color: #ffffff;
-  text-align: center;
-  line-height: 40px;
-  text-decoration: none;
+  margin-top: 70px;
 }
 
 .powerbeats__button{
+  font-size: 14px;
+  background: black;
+  border: none;
+  color: #FFFFFF;
+  width: 170px;
+  height: 41px;
+  border-radius: 100px;
   text-decoration: none;
-  color: white;
-  margin-top: 74px;
-}
-
-.powerbeats__button:hover{
-  color: #00B0FF;
+  margin-left: 41px;
+  text-align: center;
 }
 
 .powerbeats__music{
@@ -312,23 +292,71 @@ html, body {
   color: #ffffff;
 }
 
-.page-title {
-  font-size: 6em;
+.beatsx {
+  display: flex;
+}
+
+.beatsx__product-buy {
+  flex: auto;
+}
+
+.beatsx__img {
+  flex: auto;
+}
+
+.beatsx__description-small {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #2B2835;
+}
+
+.beatsx__title {
+  font-style: normal;
   font-weight: bold;
+  font-size: 50px;
+  line-height: 55px;
+  color: #2B2835;
+  margin-top: 7px;
+}
+
+.beatsx__description{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 27px;
+  color: #030303;
+  margin-top: 22px;
+}
+
+.beatsx__price {
+  display: flex;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 40px;
+  line-height: 49px;
+  color: #000000;
+  margin-top: 70px;
+}
+
+.beatsx__button {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  width: 110px;
+  height: 41px;
+  border-radius: 100px;
+  background: #000000;
+  color: #ffffff;
   text-align: center;
-  word-break: break-all;
-  line-height: 0.85;
-}
-
-.page-title > i {
-  display: block;
-  font-size: 2em;
-  margin-bottom: 0.3em;
+  text-decoration: none;
+  margin-top: 51px;
+  margin-left: 163px;
+  border: none;
 }
 
 
-.spacer {
-  flex: 2 1 auto;
-}
+
 
 
