--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,5 @@
 * {
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
 }
 
@@ -14,7 +14,7 @@ html, body {
 }
 
 .headphones__product {
-  display: flex;
+  display: inline-flex;
   background-size: 100%;
 }
 
@@ -53,7 +53,7 @@ html, body {
 }
 
 .headphones__buy {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   margin-bottom: 12px;
   margin-top: 51px;
@@ -121,6 +121,7 @@ html, body {
   flex:auto;
   left: 631px;
   top: 663px;
+  margin-right: auto;
 }
 
 .beats-pill__change {
@@ -208,6 +209,8 @@ html, body {
 }
 
 .powerbeats {
+  display: inline-flex;
+  width: 100%;
   height: 844px;
   background: linear-gradient(118.04deg, #E040FB 14.55%, #0A00B6 84.03%);
 }
@@ -223,18 +226,19 @@ html, body {
 
 .powerbeats__img {
   flex: auto;
-  width: 701px;
-  height: 804px;
-  left: 49px;
-  top: 1466px;
-  margin-left: 49px;
-  margin-top: 4px;
-
+  position: relative;
+  z-index: 0;
+  width: 856px;
+  height: 766px;
+  left: 0;
+  top: -78px;
 }
 
 .powerbeats__product-buy {
   flex: auto;
   margin-top: 233px;
+  width: 100%;
+  margin-left: 32px;
 }
 
 .powerbeats__description-small {
@@ -264,7 +268,7 @@ html, body {
 }
 
 .powerbeats__price{
-  display: flex;
+  display: inline-flex;
   font-size: 40px;
   line-height: 49px;
   color: #FFFF00;
@@ -293,7 +297,7 @@ html, body {
 }
 
 .beatsx {
-  display: flex;
+  display: inline-flex;
 }
 
 .beatsx__product-buy {
@@ -331,7 +335,7 @@ html, body {
 }
 
 .beatsx__price {
-  display: flex;
+  display: inline-flex;
   font-style: normal;
   font-weight: normal;
   font-size: 40px;
