--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,52 +1,69 @@
 .nav__menu {
-  display: flex;
-  z-index: 1;
+  display: inline-flex;
   position: relative;
+  z-index: 1;
+  width: 100%;
   height: 78px;
   background-color: rgba(25, 23, 32, 0.47);
   align-items: center;
-  justify-content: space-around;
-  width: 100%;
 }
-.nav__logo {
-  margin-left: 194px;
-}
+
 .nav__list {
-  display: flex;
-  font-style: normal;
+  flex: auto;
+}
+
+.nav__list-item {
+  margin: 0;
+  padding: 4px;
+  list-style: none;
+  text-align: center;
   font-weight: 500;
   font-size: 15px;
   line-height: 18px;
-  letter-spacing: 2px;
-  list-style: none;
+  letter-spacing: 1.90909px;
+  min-width: 100%;
+  max-width: 100%;
 }
 
-.nav__list > li > a {
-  color: white;
-  text-decoration: none;
+.nav__list-item li{
+  display: inline;
   padding: 113px;
 }
 
-.nav__list > li > a:hover {
+.nav__list a {
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+.nav__list a:hover {
+  text-decoration: none;
   color: #00B0FF;
-  font-size: 18px;
 }
 
 .nav__icons {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 180px;
-  padding-right: 95px;
+  margin-right: 24px;
 }
 
-.ellipse {
-  background: red;
-  border-radius: 100px;
-  width: 15px;
-  height: 15px;
-  text-align: center;
-  color: white;
-  margin-top: -15px;
-
+.nav__logo {
+  margin-left: 94px;
 }
+
+.search {
+  width: 25px;
+  height: 25px;
+  margin-right: 47px;
+}
+
+.account {
+  width: 25px;
+  height: 25px;
+  margin-right: 46px;
+}
+
+.bucket {
+  width: 25px;
+  height: 27px;
+}
+
+
+
