--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,28 +1,32 @@
 <footer class="footer">
   <div class="footer__content_logo">
-    <a href="#"><img src="../img/footer_logo.svg" alt="logo"></a>
+    <img src="../img/footer_logo.svg" alt="logo">
   </div>
   <div class="footer-menu">
-    <ul class="products-list">
-      <li class="column_name">Products</li>
-      <li><a href="#">HEADPHONES</a></li>
-      <li><a href="#">EARPHONES</a></li>
-      <li><a href="#">SPEAKERS</a></li>
-      <li><a href="#">ACCESSORIES</a></li>
-      <li><a href="#">COLLABORATIONS</a></li>
-      <li><a href="#">BEATSAUDIO</a></li>
-      <li><a href="#">SPECIAL OFFERS</a></li>
-    </ul>
-    <ul class="support-list">
-      <li class="column_name">Support</li>
-      <li><a href="#">PRODUCT HELP</a></li>
-      <li><a href="#">SERVICE & WARRANTY</a></li>
-      <li><a href="#">REGISTER YOUR BEATS</a></li>
-      <li><a href="#">UPDATE YOUR BEATS</a></li>
-      <li><a href="#">AUTHORIZED SERVICE PROVIDERS</a></li>
-      <li><a href="#">CONTACT SUPPORT</a></li>
-      <li><a href="#">INTERNATIONAL NUMBERS</a></li>
-    </ul>
+    <div class="products-list">
+      <ul>
+        <li class="column_name">Products</li>
+        <li><a href="#">HEADPHONES</a></li>
+        <li><a href="#">EARPHONES</a></li>
+        <li><a href="#">SPEAKERS</a></li>
+        <li><a href="#">ACCESSORIES</a></li>
+        <li><a href="#">COLLABORATIONS</a></li>
+        <li><a href="#">BEATSAUDIO</a></li>
+        <li><a href="#">SPECIAL OFFERS</a></li>
+      </ul>
+    </div>
+    <div class="support-list">
+      <ul>
+        <li class="column_name">Support</li>
+        <li><a href="#">PRODUCT HELP</a></li>
+        <li><a href="#">SERVICE & WARRANTY</a></li>
+        <li><a href="#">REGISTER YOUR BEATS</a></li>
+        <li><a href="#">UPDATE YOUR BEATS</a></li>
+        <li><a href="#">AUTHORIZED SERVICE PROVIDERS</a></li>
+        <li><a href="#">CONTACT SUPPORT</a></li>
+        <li><a href="#">INTERNATIONAL NUMBERS</a></li>
+      </ul>
+    </div>
     <ul class="company-list">
       <li class="column_name">Company</li>
       <li><a href="#">PRODUCT HELP</a></li>
