--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -3,18 +3,18 @@
     <div class="nav__logo">
       <img src="../img/fill.svg" alt="fill">
     </div>
-    <ul class="nav__list">
-      <li><a class="nav__headphones" href="">HEADPHONES</a></li>
-      <li><a class="nav__earphones" href="">EARPHONES</a></li>
-      <li><a class="nav__speakers" href="">SPEAKERS</a></li>
-      <li><a class="nav__explore" href="">EXPLORE</a></li>
-    </ul>
+    <div class="nav__list">
+      <ul class="nav__list-item">
+        <li><a class="nav__headphones" href="">HEADPHONES</a></li>
+        <li><a class="nav__earphones" href="">EARPHONES</a></li>
+        <li><a class="nav__speakers" href="">SPEAKERS</a></li>
+        <li><a class="nav__explore" href="">EXPLORE</a></li>
+      </ul>
+    </div>
     <div class="nav__icons">
-      <a href=""><img src="../img/search.png" alt="search"></a>
-      <a href=""><img src="../img/account.svg" alt="account"></a>
-      <a href=""><img src="../img/bucket.svg" alt="bucket"></a>
-<!--      <p><img class="ellipse" src="../img/ellipse_3.svg" alt="ellipse"></p>-->
-      <p class="ellipse">3</p>
+      <a href=""><img class="search" src="../img/search.png" alt="search"></a>
+      <a href=""><img class="account" src="../img/account.svg" alt="account"></a>
+      <a href=""><img class="bucket" src="../img/bucket.svg" alt="bucket"></a>
     </div>
   </div>
 </header>
