--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,8 +2,8 @@
   <div class="footer__content_logo">
     <img src="../img/footer_logo.svg" alt="logo">
   </div>
-  <div class="footer-menu">
-    <div class="products-list">
+  <ul class="list-item">
+    <li class="products-list">
       <ul>
         <li class="column_name">Products</li>
         <li><a href="#">HEADPHONES</a></li>
@@ -14,8 +14,8 @@
         <li><a href="#">BEATSAUDIO</a></li>
         <li><a href="#">SPECIAL OFFERS</a></li>
       </ul>
-    </div>
-    <div class="support-list">
+    </li>
+    <li class="support-list">
       <ul>
         <li class="column_name">Support</li>
         <li><a href="#">PRODUCT HELP</a></li>
@@ -26,22 +26,27 @@
         <li><a href="#">CONTACT SUPPORT</a></li>
         <li><a href="#">INTERNATIONAL NUMBERS</a></li>
       </ul>
-    </div>
-    <ul class="company-list">
-      <li class="column_name">Company</li>
-      <li><a href="#">PRODUCT HELP</a></li>
-      <li><a href="#">NEWS AND EVENTS</a></li>
-      <li><a href="#">PROMOTION TERMS</a></li>
-      <li><a href="#">PRIVACY POLICY</a></li>
-      <li><a href="#">TRADEMARK</a></li>
-      <li><a href="#">TERMS OF USE</a></li>
-      <li><a href="#">COOKIES</a></li>
-    </ul>
-    <ul class="follow-list">
-      <li class="column_name">Follow Us</li>
-    </ul>
-  </div>
-  </div>
+    </li>
+    <li class="company-list">
+      <ul>
+        <li class="column_name">Company</li>
+        <li><a href="#">PRODUCT HELP</a></li>
+        <li><a href="#">NEWS AND EVENTS</a></li>
+        <li><a href="#">PROMOTION TERMS</a></li>
+        <li><a href="#">PRIVACY POLICY</a></li>
+        <li><a href="#">TRADEMARK</a></li>
+        <li><a href="#">TERMS OF USE</a></li>
+        <li><a href="#">COOKIES</a></li>
+      </ul>
+    </li>
+    <li class="follow-list">
+        <li class="column_name">Follow Us</li>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-whatsapp"></i></a>
+    </li>
+  </ul>
 </footer>
 
 
