--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,7 +1,9 @@
-/** {*/
-/*  list-style-type: none;*/
-/*  margin: 0;*/
-/*  padding: 0;*/
+/*@font-face {*/
+/*  font-family: Montserrat;*/
+/*  src: url(../fonts/Montserrat-Black.eot);*/
+/*  src: url(../fonts/Montserrat-Black.ttf);*/
+/*  src: url(../fonts/Montserrat-Black.woff);*/
+/*  src: url(../fonts/Montserrat-Black.woff2);*/
 /*}*/
 
 .footer {
@@ -12,11 +14,15 @@
   width: 100%;
 }
 
+.list-item {
+  display: flex;
+}
+
 .footer__content_logo {
   flex: auto;
   max-width: 200px;
   margin-top: 55px;
-  margin-left: 135px;
+  text-align: center;
 }
 
 .footer-menu {
@@ -26,16 +32,20 @@
 
 .products-list, .support-list, .company-list, .follow-list {
   flex: auto;
+  margin: 55px;
 }
 
 .footer-menu li a {
   font-size: 15px;
   opacity: 0.47;
+
 }
 
 .footer li {
   color: white;
   list-style: none;
+  font-weight: 600;
+  line-height: 31px;
 }
 
 .footer a {
@@ -45,7 +55,6 @@
 
 .footer a:hover {
   color: #00B0FF;
-  font-size: 18px;
 }
 
 .column_name {
@@ -53,13 +62,24 @@
 }
 
 .copyright {
+  flex: none;
+}
+
+.follow-list {
+  display: flex;
+}
+
+.follow-list i {
+  width: 32px;
+  height: 32px;
+  font-size: 20px;
+  font-weight: normal;
   text-align: center;
-  font-weight: 500;
-  font-size: 52px;
-  line-height: 15px;
-  color: #000000;
-  mix-blend-mode: normal;
-  opacity: 0.31;
+  line-height: 32px;
+  color: #2B2835;
+  background: #fff;
+  border-radius: 50px;
+  margin-top: 30px;
 }
 
 
