Исправления небольших недочетов

--- a/src/css/product.scss
+++ b/src/css/product.scss
@@ -6,7 +6,7 @@
   padding-right: 99px;
 }
 
-.product__img {
+.img {
   width: 232px;
   height: 315px;
 }
@@ -17,9 +17,7 @@
   max-width: 25%;
   text-align: center;
   background: #F8F8F9;
-  width: 296px;
-  margin: 0 20px;
-  margin-top: 20px;
+  margin: 20px 20px 0;
   height: 543px;
 }
 
