--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,52 +1,59 @@
 <footer class="footer">
-  <div class="footer__content_logo">
-    <img src="../img/footer_logo.svg" alt="logo">
-  </div>
-  <ul class="list-item">
-    <li class="products-list">
-      <ul>
-        <li class="column_name">Products</li>
-        <li><a href="#">HEADPHONES</a></li>
-        <li><a href="#">EARPHONES</a></li>
-        <li><a href="#">SPEAKERS</a></li>
-        <li><a href="#">ACCESSORIES</a></li>
-        <li><a href="#">COLLABORATIONS</a></li>
-        <li><a href="#">BEATSAUDIO</a></li>
-        <li><a href="#">SPECIAL OFFERS</a></li>
+  <div class="footer__main">
+    <div class="footer__logo">
+      <img src="../img/logo.svg" alt="footer logo">
+    </div>
+    <div class="footer__menu">
+      <ul class="footer__list">
+        <li>
+          <ul class="products-list">
+            <h2>Products</h2>
+            <li><a href="#">HEADPHONES</a></li>
+            <li><a href="#">EARPHONES</a></li>
+            <li><a href="#">SPEAKERS</a></li>
+            <li><a href="#">ACCESSORIES</a></li>
+            <li><a href="#">COLLABORATIONS</a></li>
+            <li><a href="#">BEATSAUDIO</a></li>
+            <li><a href="#">SPECIAL OFFERS</a></li>
+          </ul>
+        </li>
+        <li>
+          <ul class="support-list">
+            <h2>Support</h2>
+            <li><a href="#">PRODUCT HELP</a></li>
+            <li><a href="#">SERVICE & WARRANTY</a></li>
+            <li><a href="#">REGISTER YOUR BEATS</a></li>
+            <li><a href="#">UPDATE YOUR BEATS</a></li>
+            <li><a href="#">AUTHORIZED SERVICE PROVIDERS</a></li>
+            <li><a href="#">CONTACT SUPPORT</a></li>
+            <li><a href="#">INTERNATIONAL NUMBERS</a></li>
+          </ul>
+        </li>
+        <li>
+          <ul class="company-list">
+            <h2>Company</h2>
+            <li><a href="#">PRODUCT HELP</a></li>
+            <li><a href="#">NEWS AND EVENTS</a></li>
+            <li><a href="#">PROMOTION TERMS</a></li>
+            <li><a href="#">PRIVACY POLICY</a></li>
+            <li><a href="#">TRADEMARK</a></li>
+            <li><a href="#">TERMS OF USE</a></li>
+            <li><a href="#">COOKIES</a></li>
+          </ul>
+        </li>
       </ul>
-    </li>
-    <li class="support-list">
-      <ul>
-        <li class="column_name">Support</li>
-        <li><a href="#">PRODUCT HELP</a></li>
-        <li><a href="#">SERVICE & WARRANTY</a></li>
-        <li><a href="#">REGISTER YOUR BEATS</a></li>
-        <li><a href="#">UPDATE YOUR BEATS</a></li>
-        <li><a href="#">AUTHORIZED SERVICE PROVIDERS</a></li>
-        <li><a href="#">CONTACT SUPPORT</a></li>
-        <li><a href="#">INTERNATIONAL NUMBERS</a></li>
-      </ul>
-    </li>
-    <li class="company-list">
-      <ul>
-        <li class="column_name">Company</li>
-        <li><a href="#">PRODUCT HELP</a></li>
-        <li><a href="#">NEWS AND EVENTS</a></li>
-        <li><a href="#">PROMOTION TERMS</a></li>
-        <li><a href="#">PRIVACY POLICY</a></li>
-        <li><a href="#">TRADEMARK</a></li>
-        <li><a href="#">TERMS OF USE</a></li>
-        <li><a href="#">COOKIES</a></li>
-      </ul>
-    </li>
-    <li class="follow-list">
-        <li class="column_name">Follow Us</li>
+    </div>
+    <div class="footer__follow">
+      <h2>Follow Us</h2>
+      <div class="footer___social">
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
         <a href="#"><i class="fab fa-whatsapp"></i></a>
-    </li>
-  </ul>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright © 2020 Apple Inc. - All rights reserved.</p>
+    </div>
+  </div>
 </footer>
-
-
