--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,7 +1,7 @@
 <header>
   <div class="nav__menu">
     <div class="nav__logo">
-      <img src="../img/fill.svg" alt="fill">
+      <img src="../img/logo.svg" alt="fill">
     </div>
     <div class="nav__list">
       <ul class="nav__list-item">
