--- a/src/css/signup.scss
+++ b/src/css/signup.scss
@@ -1,9 +1,9 @@
 .signup {
   text-align: center;
   background: #F8F8F9;
-  width: 100%;
-  margin-bottom: 63px;
-  margin-top: 106px;
+  margin: 7.4% 6.5% 4.8%;
+  padding-top: 52px;
+  padding-bottom: 51px;
 }
 
 .signup__title {
@@ -22,13 +22,15 @@
 }
 
 
-.signup__input input {
-  width: 507px;
-  height: 36px;
-  border-radius: 100px;
-  margin: auto;
-  box-sizing: border-box;
-  border: 1px solid #BFBFBF;
+.signup__input {
+  input {
+    width: 507px;
+    height: 36px;
+    border-radius: 100px;
+    margin: auto;
+    box-sizing: border-box;
+    border: 1px solid #BFBFBF;
+  }
 }
 
 .signup__button {
