--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -53,7 +53,7 @@
       </div>
     </div>
     <div class="copyright">
-      <p>Copyright © 2020 Apple Inc. - All rights reserved.</p>
+      Copyright © 2020 Apple Inc. - All rights reserved.
     </div>
   </div>
 </footer>
