--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -25,11 +25,10 @@
 
 .footer__list {
   display: flex;
-  color: white;
-  font-style: normal;
   font-weight: 600;
   font-size: 20px;
   line-height: 20px;
+  color: white;
   justify-content: space-between;
   list-style: none;
   width: 100%;
@@ -45,7 +44,6 @@
     color: #00B0FF;
   }
   h2 {
-    font-style: normal;
     font-weight: 600;
     font-size: 24px;
     line-height: 31px;
@@ -96,8 +94,9 @@
 }
 
 .copyright {
+  margin-right: 30%;
+  margin-left: 30%;
   margin-top: 70px;
-  font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 15px;
