--- a/src/css/nav.scss
+++ b/src/css/nav.scss
@@ -1,3 +1,5 @@
+@import "mix";
+
 .nav__menu {
   display: flex;
   position: relative;
@@ -15,18 +17,19 @@
 }
 
 .nav__list-item {
+  display: flex;
+  margin: 0 -5px;
   list-style: none;
   font-weight: 500;
   font-size: 15px;
   line-height: 18px;
   letter-spacing: 1.90909px;
-  width:100%;
-  display: flex;
   justify-content: center;
+  margin-left: 113px;
 }
 
 .nav__list-item li{
-  flex:auto;
+  flex: 1 1 auto;
   min-width: 130px;
   max-width: 13%;
   margin: 0 2%;
@@ -34,18 +37,17 @@
 
 .nav__list a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: $bg_text
 }
 
 .nav__list a:hover {
   text-decoration: none;
-  color: #00B0FF;
+  color: $bg_button;
 }
 
 .nav__icons {
   flex: auto;
   min-width: 300px;
-  max-width: 30%;
   text-align: center;
 }
 
@@ -53,7 +55,6 @@
   flex:auto;
   min-width: 100px;
   max-width: 13%;
-  margin: 0 2%;
   text-align: center;
 }
 
@@ -61,6 +62,7 @@
   width: 25px;
   height: 25px;
   margin-right: 47px;
+  margin-left: 130px;
 }
 
 .search:hover {
