--- a/src/css/signup.scss
+++ b/src/css/signup.scss
@@ -1,6 +1,8 @@
+@import "mix";
+
 .signup {
   text-align: center;
-  background: #F8F8F9;
+  background: $bg_product;
   margin: 7.4% 6.5% 4.8%;
   padding-top: 52px;
   padding-bottom: 51px;
@@ -29,7 +31,7 @@
     border-radius: 100px;
     margin: auto;
     box-sizing: border-box;
-    border: 1px solid #BFBFBF;
+    border: $border_input;
   }
 }
 
@@ -38,12 +40,12 @@
   border-radius: 100px;
   width: 507px;
   height: 41px;
-  color: white;
+  color: $bg_text;
   border: none;
   margin-top: 19px;
   margin-bottom: 50px;
 }
 
 .signup__button:hover {
-  background: #227cff;
+  background: $bg_btn_hover;
 }
