--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -1,5 +1,20 @@
+<body>
+<ul class="burger-menu__box">
+  <li><a class="menu__item" href="#">HEADPHONES</a></li>
+  <li><a class="menu__item" href="#">EARPHONES</a></li>
+  <li><a class="menu__item" href="#">SPEAKERS</a></li>
+  <li><a class="menu__item" href="#">EXPLORE</a></li>
+</ul>
+</body>
 <header>
   <div class="nav__menu">
+    <div class="nav__burger">
+      <div class="burger-menu" onclick="menuOn(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+    </div>
     <div class="nav__logo">
       <img src="../img/logo.svg" alt="fill">
     </div>
