--- a/src/css/footer.scss
+++ b/src/css/footer.scss
@@ -1,8 +1,8 @@
 .footer {
   background: #2B2835;
   height: 344px;
-  width: 100%;
-  .footer__main{
+  //width: 100%;
+  .footer__main {
     display: flex;
     padding-bottom: 21px;
     justify-content: space-around;
