--- a/src/partials/nav.html
+++ b/src/partials/nav.html
@@ -9,7 +9,7 @@
 <header>
   <div class="nav__menu">
     <div class="nav__burger">
-      <div class="burger-menu" onclick="menuOn(this)">
+      <div class="burger-menu"">
         <div class="bar1"></div>
         <div class="bar2"></div>
         <div class="bar3"></div>
